tests/suite/fail/generated/types/fail_div_string_f64.ny
fn main() {
    let _ = "a" / 1.0 //~ ERROR Type mismatch in arithmetic
}
